<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home_icon_silhouette"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/library"
            android:icon="@drawable/ic_book"
            android:title="@string/menu_library" />
        <item
            android:id="@+id/schedule"
            android:icon="@drawable/ic_calendar"
            android:title="@string/menu_shedule" />
        <item
            android:id="@+id/server"
            android:icon="@drawable/ic_man_user"
            android:title="@string/menu_admin" />
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_logout"
            android:title="Профиль" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings_work_tool"
            android:title="@string/menu_settings" />

    </group>

    <item android:title="@string/menu_connection">
        <menu>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_feedback" />
        </menu>
    </item>

</menu>
