<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_of_app"
    tools:context=".CheckNewEmail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_light"
            android:gravity="center"
            android:text="@string/check_new_email_text2"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"
            android:fontFamily="@font/roboto_light"
            android:gravity="center"
            android:hint="@string/check_new_email_hint1"
            android:textColorHint="#FFFFFF">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/checkNewEmail1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:inputType="numberSigned"
                android:maxLines="1"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_light"
            android:gravity="center"
            android:text="@string/check_new_email_text1"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"
            android:fontFamily="@font/roboto_light"
            android:gravity="center"
            android:hint="@string/check_new_email_hint2"
            android:textColorHint="#FFFFFF">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/checkNewEmail2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:inputType="numberSigned"
                android:maxLines="1"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/checkNewEmail3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/button_gradient"
            android:fontFamily="@font/roboto_light"
            android:padding="24dp"
            android:text="@string/check_new_email_button"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />
    </LinearLayout>

</FrameLayout>