<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_of_app"
    tools:context=".Settings">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:layout_weight="1"
                app:cardCornerRadius="32dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/text_profile"
                        android:fontFamily="@font/roboto_light"
                        android:padding="10dp"
                        android:text="@string/profile_main"
                        android:textColor="#6221d8"
                        android:textSize="20sp" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="40dp"
                        android:fontFamily="@font/roboto_light"
                        android:gravity="center"
                        android:hint="@string/settings_hint_name"
                        android:textColor="#FFF"
                        android:textColorHint="#6221d8">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/profName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_light"
                            android:maxLines="1"
                            android:textColor="#6221d8"
                            android:textColorHint="#6221d8" />

                    </android.support.design.widget.TextInputLayout>

                    <RadioGroup
                        android:id="@+id/radioGroup"
                        android:layout_width="match_parent"
                        android:layout_height="67dp"
                        android:layout_marginLeft="35dp"
                        android:layout_marginRight="40dp">

                        <RadioButton
                            android:id="@+id/schoolBoy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/roboto_light"
                            android:text="@string/registration_who1"
                            android:textColor="#6221d8" />

                        <RadioButton
                            android:id="@+id/heightSchoolBoy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/roboto_light"
                            android:text="@string/registration_who2"
                            android:textColor="#6221d8" />
                    </RadioGroup>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"
                        android:layout_marginRight="40dp"
                        android:fontFamily="@font/roboto_light"
                        android:gravity="center"
                        android:hint="@string/settings_hint_school"
                        android:textColorHint="#6221d8">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/profSchool"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_light"
                            android:maxLines="1"
                            android:textColor="#6221d8"
                            android:textColorHint="#6221d8" />


                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"
                        android:layout_marginRight="40dp"
                        android:fontFamily="@font/roboto_light"
                        android:gravity="center"
                        android:hint="@string/settings_hint_class"
                        android:textColorHint="#6221d8">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/profClass"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_light"
                            android:inputType="numberSigned"
                            android:maxLines="1"
                            android:textColor="#6221d8"
                            android:textColorHint="#6221d8" />

                    </android.support.design.widget.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end">

                        <Button
                            android:id="@+id/saveProfile"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:background="@drawable/button_profile"
                            android:fontFamily="@font/roboto_light"
                            android:padding="10dp"
                            android:text="@string/registration_save"
                            android:textColor="#FFF" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:layout_weight="1"
                app:cardCornerRadius="32dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/text_profile"
                        android:fontFamily="@font/roboto_light"
                        android:padding="10dp"
                        android:text="@string/registration_overSettings"
                        android:textColor="#6221d8"
                        android:textSize="20sp" />

                    <CheckBox
                        android:id="@+id/checkBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="20dp"
                        android:fontFamily="@font/roboto_light"
                        android:text="@string/settings_schedule"
                        android:textColor="#6221d8" />

                    <CheckBox
                        android:id="@+id/darkBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="20dp"
                        android:fontFamily="@font/roboto_light"
                        android:text="@string/settings_dark_theme"
                        android:textColor="#6221d8" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end">

                        <Button
                            android:id="@+id/infoApp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:layout_marginTop="15dp"
                            android:background="@drawable/button_profile"
                            android:fontFamily="@font/roboto_light"
                            android:padding="10dp"
                            android:text="@string/settings_about_app"
                            android:textColor="#FFF" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>
</FrameLayout>